codex-rs/core/tests/suite/snapshots/all__suite__scenarios__incremental_tools__incremental_tool_removals.snap
---
source: core/tests/suite/scenarios_incremental_tools.rs
assertion_line: 461
expression: "context_snapshot::format_request_history_snapshot(\"MCP refreshes remove one tool, then its whole namespace, before restoring both tools. Standalone removal notices and the restored namespace append to history; unchanged turns do not repeat updates.\",\n&requests,\n&ContextSnapshotOptions::default().rewrite_known_segments().include_request_settings(),)"
---
Scenario: MCP refreshes remove one tool, then its whole namespace, before restoring both tools. Standalone removal notices and the restored namespace append to history; unchanged turns do not repeat updates.

## Window 1
Settings:
  include: ["reasoning.encrypted_content"]
  model: "gpt-5.5"
  parallel_tool_calls: false
  prompt_cache_key: "<PROMPT_CACHE_KEY 1>"
  reasoning: {"context":"all_turns","effort":"medium"}
  store: false
  stream: true
  text: {"verbosity":"low"}
  tool_choice: "auto"
-- request 1 (turn) --
00:additional_tools/developer (3; hash=7748a53142f449b7):
        - namespace/functions; hash=124fee69a69ed6b2
          - function/exec_command
          - function/write_stdin
          - function/list_mcp_resources
          - function/list_mcp_resource_templates
          - function/read_mcp_resource
          - function/request_user_input
          - custom/apply_patch
          - function/view_image
        - namespace/multi_agent_v1: Tools for spawning and managing sub-agents.; hash=2327142bda177c50
          - function/close_agent
          - function/resume_agent
          - function/send_input
          - function/spawn_agent
          - function/wait_agent
        - namespace/mcp__echo_service: Echo service instructions.; hash=a5144e5d70d01799
          - function/cwd
          - function/echo
01:message/developer:
    <MODEL_INSTRUCTIONS>
02:message/developer[2]:
    [01] <context_continuation>
        The runtime manages context compaction or rollover. Context-window capacity is not a task deadline or th...real failures accurately instead of claiming success. [hash=1eca8308a77806e2]
        </context_continuation>
    [02] <PERMISSIONS_INSTRUCTIONS>
03:message/user:
    <ENVIRONMENT_CONTEXT>
04:message/user:
    Begin with the echo service.
-- request 2 (turn) --
05:message/developer:
    The following tools are no longer available. Do not call them:
    - mcp__echo_service.cwd
06:message/user:
    Continue after disabling the cwd tool.
-- request 3 (turn) --
07:message/user:
    Continue with the remaining echo tool.
-- request 4 (turn) --
08:message/developer:
    The following namespaces are no longer available. Do not call tools in them unless those tools are declared in a later update:
    - mcp__echo_service

    The following tools are no longer available. Do not call them:
    - functions.list_mcp_resource_templates
    - functions.list_mcp_resources
    - functions.read_mcp_resource
09:message/user:
    Continue after removing the echo service.
-- request 5 (turn) --
10:message/user:
    Continue without the echo service.
-- request 6 (turn) --
11:additional_tools/developer (2; hash=817ef381d2e3ba83):
        - namespace/functions: This is an incremental namespace update. Previously declared tools remain available for direct ca...; hash=b54767a7496e2119
          - function/list_mcp_resources
          - function/list_mcp_resource_templates
          - function/read_mcp_resource
        - namespace/mcp__echo_service: Echo service instructions.; hash=a5144e5d70d01799
          - function/cwd
          - function/echo
12:message/user:
    Continue with the restored echo service.
-- request 7 (turn) --
13:message/user:
    Continue with the same restored tools.
